FS-T1182 fixed scrollbar and extra bottom space

--- a/playground/app/components/example/example.component.scss
+++ b/playground/app/components/example/example.component.scss
@@ -1,3 +1,9 @@
-.editor-container {
-  //height: 500px
+:host {
+  ::ng-deep {
+    .editor-container {
+      .monaco-editor {
+        max-height: 500px
+      }
+    }
+  }
 }
