--- a/src/app/components/text-editor/text-editor.component.scss
+++ b/src/app/components/text-editor/text-editor.component.scss
@@ -1,3 +1,11 @@
 :host ngx-monaco-editor {
   height: 100% !important;
 }
+
+:host {
+  ::ng-deep {
+    .decorationsOverviewRuler, .scrollbar {
+      display: none;
+    }
+  }
+}
